--- a/other/deny-default-service-account-bindings/deny-default-service-account-bindings.yaml
+++ b/other/deny-default-service-account-bindings/deny-default-service-account-bindings.yaml
@@ -17,7 +17,7 @@ metadata:
       attacker could potentially gain access to other resources within the cluster. For enhanced 
       security, using the default service account in RoleBindings is not recommended.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Audit
   background: false
   rules:
     - name: deny-default-service-account-bindings
