--- a/other-mpol/always-pull-images/.kyverno-test/patchedResource2.yaml
+++ b/other-mpol/always-pull-images/.kyverno-test/patchedResource2.yaml
@@ -6,5 +6,9 @@ metadata:
     foo: bar
 spec:
   containers:
-  - name: ""
+  - name: "nginx-1"
     image: nginx:latest
+    imagePullPolicy: Always
+  - name: "nginx-2"
+    image: nginx:latest
+    imagePullPolicy: Always
