--- a/other-mpol/always-pull-images/.kyverno-test/resource.yaml
+++ b/other-mpol/always-pull-images/.kyverno-test/resource.yaml
@@ -17,5 +17,7 @@ metadata:
     foo: bar
 spec:
   containers:
-  - name: ""
+  - name: "nginx-1"
+    image: nginx:latest
+  - name: "nginx-2"
     image: nginx:latest
