fix: mutate existing
Signed-off-by: ShutingZhao <shuting@nirmata.com>

--- a/psa-mpol/add-privileged-existing-namespaces/add-privileged-existing-namespaces.yaml
+++ b/psa-mpol/add-privileged-existing-namespaces/add-privileged-existing-namespaces.yaml
@@ -35,8 +35,6 @@ spec:
         expression: |
           Object{
             metadata: Object.metadata{
-              labels: {
-                "pod-security.kubernetes.io/enforce": "privileged"
-              }
+              labels: {"pod-security.kubernetes.io/enforce": "privileged"}
             }
           }
