fix: apply crd files
Signed-off-by: ShutingZhao <shuting@nirmata.com>

--- a/kubevirt-gpol/add-services/.chainsaw-test/chainsaw-test.yaml
+++ b/kubevirt-gpol/add-services/.chainsaw-test/chainsaw-test.yaml
@@ -8,6 +8,8 @@ spec:
   steps:
   - name: step-00
     try:
+    - apply:
+        file: ../../../.chainsaw/crds/kubevirt-vm.yaml
     - assert:
         file: chainsaw-step-00-assert-1.yaml
   - name: step-01
