--- a/cleanup-dpol/cleanup-empty-replicasets/.chainsaw-test/chainsaw-test.yaml
+++ b/cleanup-dpol/cleanup-empty-replicasets/.chainsaw-test/chainsaw-test.yaml
@@ -33,8 +33,8 @@ spec:
     try:
     - apply:
         file: ../cleanup-empty-replicasets.yaml
-    - assert:
-        file: ../cleanup-empty-replicasets.yaml
+    # - assert:
+    #     file: ../cleanup-empty-replicasets.yaml
   - name: Wait
     try:
     - sleep:
