--- a/other-mpol/label-nodes-cri/.chainsaw-test/chainsaw-test.yaml
+++ b/other-mpol/label-nodes-cri/.chainsaw-test/chainsaw-test.yaml
@@ -23,6 +23,12 @@ spec:
         file: ../label-nodes-cri.yaml
     - assert:
         file: policy-ready.yaml
+  - name: step-02-trigger
+    try:
+    - script:
+        content: |
+          node=$(kubectl get nodes --no-headers | awk '{print $1}' | head -n 1)
+          kubectl annotate node $node kyverno-test=trigger --overwrite
   - name: step-03
     try:
     - sleep:
