--- a/cleanup-dpol/cleanup-empty-replicasets/cleanup-empty-replicasets.yaml
+++ b/cleanup-dpol/cleanup-empty-replicasets/cleanup-empty-replicasets.yaml
@@ -27,4 +27,4 @@ spec:
   conditions:
     - name: is-empty
       expression: "object.spec.replicas == 0"
-  schedule: "*/5 * * * *"
+  schedule: "* * * * *"
