Fix attestor reference in image verification
Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

--- a/other/verify-image-ivpol/verify-image-ivpol.yaml
+++ b/other/verify-image-ivpol/verify-image-ivpol.yaml
@@ -41,6 +41,6 @@ spec:
                 -----END PUBLIC KEY-----
   validations:
     - expression: >-
-       images.containers.map(image, verifyImageSignatures(image, [attestors.cosign])).all(e ,e > 0)
+       images.containers.map(image, verifyImageSignatures(image, [attestors["cosign"]])).all(e, e > 0)
       message: >-
        failed the verification
