--- a/karpenter/add-karpenter-donot-evict/artifacthub-pkg.yml
+++ b/karpenter/add-karpenter-donot-evict/artifacthub-pkg.yml
@@ -1,19 +1,19 @@
-name: add-karpenter-donot-evict
+name: add-karpenter-do-not-disrupt
 version: 1.0.0
-displayName: Add Karpenter Do Not Evict
+displayName: Add Karpenter Do Not Disrupt
 createdAt: "2023-04-10T20:11:12.000Z"
 description: >-
-  If a Pod exists with the annotation `karpenter.sh/do-not-evict: true` on a Node, and a request is made to delete the Node, Karpenter will not drain any Pods from that Node or otherwise try to delete the Node. This is useful for Pods that should run uninterrupted to completion. This policy mutates Jobs and CronJobs so that Pods spawned by them will contain the `karpenter.sh/do-not-evict: true` annotation.
+  If a Pod exists with the annotation `karpenter.sh/do-not-disrupt: true` on a Node, and a request is made to delete the Node, Karpenter will not drain any Pods from that Node or otherwise try to delete the Node. This is useful for Pods that should run uninterrupted to completion. This policy mutates Jobs and CronJobs so that Pods spawned by them will contain the `karpenter.sh/do-not-disrupt: true` annotation.
 install: |-
   ```shell
-  kubectl apply -f https://raw.githubusercontent.com/kyverno/policies/main/karpenter/add-karpenter-donot-evict/add-karpenter-donot-evict.yaml
+  kubectl apply -f https://raw.githubusercontent.com/kyverno/policies/main/karpenter/add-karpenter-donot-disrupt/add-karpenter-do-not-disrupt.yaml
   ```
 keywords:
   - kyverno
   - Karpenter
   - EKS Best Practices
 readme: |
-  If a Pod exists with the annotation `karpenter.sh/do-not-evict: true` on a Node, and a request is made to delete the Node, Karpenter will not drain any Pods from that Node or otherwise try to delete the Node. This is useful for Pods that should run uninterrupted to completion. This policy mutates Jobs and CronJobs so that Pods spawned by them will contain the `karpenter.sh/do-not-evict: true` annotation.
+  If a Pod exists with the annotation `karpenter.sh/do-not-disrupt: true` on a Node, and a request is made to delete the Node, Karpenter will not drain any Pods from that Node or otherwise try to delete the Node. This is useful for Pods that should run uninterrupted to completion. This policy mutates Jobs and CronJobs so that Pods spawned by them will contain the `karpenter.sh/do-not-disrupt: true` annotation.
   
   Refer to the documentation for more details on Kyverno annotations: https://artifacthub.io/docs/topics/annotations/kyverno/
 annotations:
