chore: convert cpols to vpols
Signed-off-by: Mariam Fahmy <mariam.fahmy@nirmata.com>

--- a/other-vpol/block-ephemeral-containers/block-ephemeral-containers.yaml
+++ b/other-vpol/block-ephemeral-containers/block-ephemeral-containers.yaml
@@ -13,7 +13,7 @@ spec:
     - apiGroups:   [""]
       apiVersions: ["v1"]
       operations:  ["CREATE", "UPDATE"]
-      resources: ["pods", "pods/ephemeralcontainers"] 
+      resources:   ["pods"] 
   validations:
    - expression: >-
       object.spec.?ephemeralContainers.orValue([]).size() == 0
