chore: add other-vpol to the CI
Signed-off-by: Mariam Fahmy <mariam.fahmy@nirmata.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,22 +53,22 @@ jobs:
         path: argo-cel
 
   karpenter-mpol:
-          strategy:
-            fail-fast: false
-            matrix:
-              k8s-version: [v1.30.13, v1.31.9, v1.32.5, v1.33.1]
-          runs-on: ubuntu-latest
-          steps:
-          - name: Checkout
-            uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
-          - name: Setup Environment
-            uses: ./.github/actions/setup-env
-            with:
-              k8s-version: ${{ matrix.k8s-version }}
-          - name: Run Tests
-            uses: ./.github/actions/run-tests
-            with:
-              path: karpenter-mpol
+    strategy:
+      fail-fast: false
+      matrix:
+        k8s-version: [v1.30.13, v1.31.9, v1.32.5, v1.33.1]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
+    - name: Setup Environment
+      uses: ./.github/actions/setup-env
+      with:
+        k8s-version: ${{ matrix.k8s-version }}
+    - name: Run Tests
+      uses: ./.github/actions/run-tests
+      with:
+        path: karpenter-mpol
 
   aws:
     strategy:
@@ -729,7 +729,7 @@ jobs:
         path: other
         shard-index: ${{ matrix.shard-index }}
         shard-count: 9
-
+  
   other-mpol:
     strategy:
       fail-fast: false
@@ -748,6 +748,27 @@ jobs:
       uses: ./.github/actions/run-tests
       with:
         path: other-mpol
+        shard-index: ${{ matrix.shard-index }}
+        shard-count: 9
+
+  other-vpol:
+    strategy:
+      fail-fast: false
+      matrix:
+        k8s-version: [v1.30.13, v1.31.9, v1.32.5, v1.33.1]
+        shard-index: [0,1,2,3,4,5,6,7,8]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
+    - name: Setup Environment
+      uses: ./.github/actions/setup-env
+      with:
+        k8s-version: ${{ matrix.k8s-version }}
+    - name: Run Tests
+      uses: ./.github/actions/run-tests
+      with:
+        path: other-vpol
         shard-index: ${{ matrix.shard-index }}
         shard-count: 9
 
@@ -1128,6 +1149,7 @@ jobs:
     - openshift
     - openshift-cel
     - other
+    - other-vpol
     - other-mpol
     - other-cel
     - other-gpol
@@ -1194,6 +1216,7 @@ jobs:
     - openshift
     - openshift-cel
     - other
+    - other-vpol
     - other-mpol
     - other-cel
     - other-gpol
