chore: fix tests
Signed-off-by: Mariam Fahmy <mariam.fahmy@nirmata.com>

--- a/other-vpol/block-ephemeral-containers/.chainsaw-test/policy-ready.yaml
+++ b/other-vpol/block-ephemeral-containers/.chainsaw-test/policy-ready.yaml
@@ -8,9 +8,6 @@ status:
     - reason: Succeeded
       type: WebhookConfigured
       status: "True"
-    # - message: 'Policy is not ready for reporting, missing permissions: get /v1,
-    #      Resource=pods/ephemeralcontainers: ; list /v1, Resource=pods/ephemeralcontainers:
-    #      ; watch /v1, Resource=pods/ephemeralcontainers: .'
-    - reason: Failed
-      status: "False"
+    - reason: Succeeded
       type: RBACPermissionsGranted
+      status: "True"
