--- a/other-vpol/deny-commands-in-exec-probe/.chainsaw-test/policy-ready.yaml
+++ b/other-vpol/deny-commands-in-exec-probe/.chainsaw-test/policy-ready.yaml
@@ -4,11 +4,13 @@ metadata:
   name: deny-commands-in-exec-probe
 status:
   conditionStatus:
-    conditions:
-    - reason: Succeeded
+    (conditions[?type == 'WebhookConfigured']):
+    - message: Webhook configured.
+      reason: Succeeded
+      status: "True"
       type: WebhookConfigured
+    (conditions[?type == 'RBACPermissionsGranted']):
+    - message: Policy is ready for reporting.
+      reason: Succeeded
       status: "True"
-    - reason: Succeeded
       type: RBACPermissionsGranted
-      status: "True"
-
