--- a/other-vpol/deny-secret-service-account-token-type/.chainsaw-test/chainsaw-test.yaml
+++ b/other-vpol/deny-secret-service-account-token-type/.chainsaw-test/chainsaw-test.yaml
@@ -11,6 +11,8 @@ spec:
   - name: step-01
     try:
     - apply:
+        file: permissions.yaml
+    - apply:
         file: ../deny-secret-service-account-token-type.yaml
     - patch:
         resource:
