--- a/other-vpol/restrict-jobs/.chainsaw-test/policy-ready.yaml
+++ b/other-vpol/restrict-jobs/.chainsaw-test/policy-ready.yaml
@@ -4,10 +4,13 @@ metadata:
   name: restrict-jobs
 status:
   conditionStatus:
-    conditions:
-    - reason: Succeeded
+    (conditions[?type == 'WebhookConfigured']):
+    - message: Webhook configured.
+      reason: Succeeded
+      status: "True"
       type: WebhookConfigured
+    (conditions[?type == 'RBACPermissionsGranted']):
+    - message: Policy is ready for reporting.
+      reason: Succeeded
       status: "True"
-    - reason: Succeeded
       type: RBACPermissionsGranted
-      status: "True"
