--- a/other-vpol/disallow-secrets-from-env-vars/.chainsaw-test/policy-ready.yaml
+++ b/other-vpol/disallow-secrets-from-env-vars/.chainsaw-test/policy-ready.yaml
@@ -4,12 +4,13 @@ metadata:
   name: secrets-not-from-env-vars
 status:
   conditionStatus:
-    conditions:
-    - reason: Succeeded
+    (conditions[?type == 'WebhookConfigured']):
+    - message: Webhook configured.
+      reason: Succeeded
+      status: "True"
       type: WebhookConfigured
+    (conditions[?type == 'RBACPermissionsGranted']):
+    - message: Policy is ready for reporting.
+      reason: Succeeded
       status: "True"
-    - reason: Succeeded
       type: RBACPermissionsGranted
-      status: "True"
-
-
