--- a/other-vpol/limit-hostpath-type-pv/.chainsaw-test/policy-ready.yaml
+++ b/other-vpol/limit-hostpath-type-pv/.chainsaw-test/policy-ready.yaml
@@ -4,10 +4,12 @@ metadata:
   name: limit-hostpath-type-pv
 status:
   conditionStatus:
-    conditions:
-    - reason: Succeeded
-      type: WebhookConfigured
+    (conditions[?type == 'WebhookConfigured']):
+    - message: Webhook configured.
+      reason: Succeeded
       status: "True"
+      type: WebhookConfigured
+    (conditions[?type == 'RBACPermissionsGranted']):
     - reason: Failed
       status: "False"
       type: RBACPermissionsGranted
