--- a/other-vpol/restrict-escalation-verbs-roles/.chainsaw-test/policy-ready.yaml
+++ b/other-vpol/restrict-escalation-verbs-roles/.chainsaw-test/policy-ready.yaml
@@ -4,11 +4,12 @@ metadata:
   name: restrict-escalation-verbs-roles
 status:
   conditionStatus:
-    conditions:
-    - reason: Succeeded
-      type: WebhookConfigured
+    (conditions[?type == 'WebhookConfigured']):
+    - message: Webhook configured.
+      reason: Succeeded
       status: "True"
+      type: WebhookConfigured
+    (conditions[?type == 'RBACPermissionsGranted']):
     - reason: Failed
       status: "False"
       type: RBACPermissionsGranted
-
