--- a/other-vpol/ensure-readonly-hostpath/.chainsaw-test/policy-ready.yaml
+++ b/other-vpol/ensure-readonly-hostpath/.chainsaw-test/policy-ready.yaml
@@ -4,12 +4,14 @@ metadata:
   name: ensure-readonly-hostpath
 status:
   conditionStatus:
-    conditions:
-    - reason: Succeeded
-      type: WebhookConfigured
-      status: "True"
-    - reason: Succeeded
-      type: RBACPermissionsGranted
-      status: "True"
-
+            (conditions[?type == 'RBACPermissionsGranted']):
+            - message: Policy is ready for reporting.
+              reason: Succeeded
+              status: "True"
+            (conditions[?type == 'WebhookConfigured']):
+            - message: Webhook configured.
+              reason: Succeeded
+              status: "True"
+              type: WebhookConfigured
+ 
 
