--- a/other-vpol/require-non-root-groups/.chainsaw-test/policy-ready.yaml
+++ b/other-vpol/require-non-root-groups/.chainsaw-test/policy-ready.yaml
@@ -4,11 +4,13 @@ metadata:
   name: require-non-root-groups
 status:
   conditionStatus:
-    conditions:
-    - reason: Succeeded
-      type: WebhookConfigured
-      status: "True"
-    - reason: Succeeded
-      type: RBACPermissionsGranted
-      status: "True"
-
+            (conditions[?type == 'RBACPermissionsGranted']):
+            - message: Policy is ready for reporting.
+              reason: Succeeded
+              status: "True"
+            (conditions[?type == 'WebhookConfigured']):
+            - message: Webhook configured.
+              reason: Succeeded
+              status: "True"
+              type: WebhookConfigured
+ 
