--- a/other-vpol/block-ephemeral-containers/.chainsaw-test/policy-ready.yaml
+++ b/other-vpol/block-ephemeral-containers/.chainsaw-test/policy-ready.yaml
@@ -4,13 +4,13 @@ metadata:
   name: block-ephemeral-containers
 status:
   conditionStatus:
-    conditions:
-    - reason: Succeeded
-      type: WebhookConfigured
-      status: "True"
-    # - message: 'Policy is not ready for reporting, missing permissions: get /v1,
-    #      Resource=pods/ephemeralcontainers: ; list /v1, Resource=pods/ephemeralcontainers:
-    #      ; watch /v1, Resource=pods/ephemeralcontainers: .'
-    - reason: Failed
-      status: "False"
-      type: RBACPermissionsGranted
+            (conditions[?type == 'RBACPermissionsGranted']):
+            - message: Policy is ready for reporting.
+              reason: Succeeded
+              status: "True"
+            (conditions[?type == 'WebhookConfigured']):
+            - message: Webhook configured.
+              reason: Succeeded
+              status: "True"
+              type: WebhookConfigured
+ 
