--- a/other/verify-image-ivpol/.chainsaw-test/policy-ready.yaml
+++ b/other/verify-image-ivpol/.chainsaw-test/policy-ready.yaml
@@ -4,14 +4,13 @@ metadata:
   name: verify-image-ivpol
 status:
   conditionStatus:
-    conditions:
-      - message: Webhook configured.
-        reason: Succeeded
-        status: "True"
-        type: WebhookConfigured
-      - message: Policy is ready for reporting.
-        reason: Succeeded
-        status: "True"
-        type: RBACPermissionsGranted
-    message: ""
-    ready: true
+            (conditions[?type == 'RBACPermissionsGranted']):
+            - message: Policy is ready for reporting.
+              reason: Succeeded
+              status: "True"
+            (conditions[?type == 'WebhookConfigured']):
+            - message: Webhook configured.
+              reason: Succeeded
+              status: "True"
+              type: WebhookConfigured
+ 
