--- a/other-vpol/block-ephemeral-containers/block-ephemeral-containers.yaml
+++ b/other-vpol/block-ephemeral-containers/block-ephemeral-containers.yaml
@@ -13,7 +13,7 @@ spec:
     - apiGroups:   [""]
       apiVersions: ["v1"]
       operations:  ["CREATE", "UPDATE"]
-      resources:   ["pods"] 
+      resources: ["pods", "pods/ephemeralcontainers"] 
   validations:
    - expression: >-
       object.spec.?ephemeralContainers.orValue([]).size() == 0
