--- a/other-vpol/restrict-wildcard-verbs/.chainsaw-test/policy-ready.yaml
+++ b/other-vpol/restrict-wildcard-verbs/.chainsaw-test/policy-ready.yaml
@@ -3,15 +3,13 @@ kind: ValidatingPolicy
 metadata:
   name: restrict-wildcard-verbs
 status:
-  conditionStatus:
-            (conditions[?type == 'RBACPermissionsGranted']):
-            - message: Policy is ready for reporting.
-              reason: Succeeded
-              status: "True"
-            (conditions[?type == 'WebhookConfigured']):
-            - message: Webhook configured.
-              reason: Succeeded
-              status: "True"
-              type: WebhookConfigured
- 
-
+    conditionStatus:
+      conditions:
+      - reason: Succeeded
+        status: "True"
+        type: WebhookConfigured
+      - reason: Failed
+        status: "False"
+        type: RBACPermissionsGranted
+      
+    
