--- a/other-vpol/restrict-node-label-creation/.chainsaw-test/policy-ready.yaml
+++ b/other-vpol/restrict-node-label-creation/.chainsaw-test/policy-ready.yaml
@@ -4,10 +4,12 @@ metadata:
   name: restrict-node-label-creation
 status:
   conditionStatus:
-    conditions:
-    - reason: Succeeded
-      type: WebhookConfigured
-      status: "True"
-    - reason: Succeeded
-      type: RBACPermissionsGranted
-      status: "True"
+            (conditions[?type == 'RBACPermissionsGranted']):
+            - reason: Failed
+              status: "False"
+            (conditions[?type == 'WebhookConfigured']):
+            - message: Webhook configured.
+              reason: Succeeded
+              status: "True"
+              type: WebhookConfigured
+ 
