fix: double-quote format issue when redenring
Signed-off-by: ShutingZhao <shuting@nirmata.com>

--- a/other/block-kubectl-cp/block-kubectl-cp.yaml
+++ b/other/block-kubectl-cp/block-kubectl-cp.yaml
@@ -3,7 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: block-kubectl-cp-by-pod-label
   annotations:
-    policies.kyverno.io/title: Block "kubectl cp" by Pod Label
+    policies.kyverno.io/title: Block kubectl cp command by Pod Label
     policies.kyverno.io/category: Sample
     policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/subject: Pod
