add vpol dir to CI (#1389)
* add dir in ci

Signed-off-by: Mohd Kamaal <mohdcode@MacBook-Air.local>

* correction in test.yaml

Signed-off-by: Mohd Kamaal <mohdcode@MacBook-Air.local>

* update policy-ready

Signed-off-by: Mohd Kamaal <mohdcode@MacBook-Air.local>

* fix assertion file

Signed-off-by: Mohd Kamaal <mohdcode@MacBook-Air.local>

* lint fix

Signed-off-by: Mohd Kamaal <mohdcode@MacBook-Air.local>

---------

Signed-off-by: Mohd Kamaal <mohdcode@MacBook-Air.local>
Co-authored-by: Mohd Kamaal <mohdcode@MacBook-Air.local>
Signed-off-by: Brandon Metcalf <brandon.metcalf@umbra.space>

--- a/other-vpol/block-ephemeral-containers/.chainsaw-test/policy-ready.yaml
+++ b/other-vpol/block-ephemeral-containers/.chainsaw-test/policy-ready.yaml
@@ -4,13 +4,12 @@ metadata:
   name: block-ephemeral-containers
 status:
   conditionStatus:
-    conditions:
-    - reason: Succeeded
-      type: WebhookConfigured
-      status: "True"
-    # - message: 'Policy is not ready for reporting, missing permissions: get /v1,
-    #      Resource=pods/ephemeralcontainers: ; list /v1, Resource=pods/ephemeralcontainers:
-    #      ; watch /v1, Resource=pods/ephemeralcontainers: .'
-    - reason: Failed
-      status: "False"
-      type: RBACPermissionsGranted
+            (conditions[?type == 'RBACPermissionsGranted']):
+            - reason: Failed
+              status: "False"
+            (conditions[?type == 'WebhookConfigured']):
+            - message: Webhook configured.
+              reason: Succeeded
+              status: "True"
+              type: WebhookConfigured
+ 
