--- a/best-practices-vpol/restrict-image-registries/.chainsaw-test/chainsaw-test.yaml
+++ b/best-practices-vpol/restrict-image-registries/.chainsaw-test/chainsaw-test.yaml
@@ -22,12 +22,12 @@ spec:
             validationActions: [Deny]
     - assert:
         file: policy-ready.yaml
+    - sleep:
+        duration: 7s
   - name: step-02
     try:
     - apply:
         file: good-pods.yaml
-    - apply:
-        file: good-podcontrollers.yaml
     - apply:
         expect:
         - check:
@@ -43,22 +43,22 @@ spec:
         - check:
             ($error != null): true
         file: bad-pod-false.yaml
-    - apply:
-        expect:
-        - check:
-            ($error != null): true
-        file: bad-podcontrollers.yaml
   - name: step-03
     try:
     - script:
-        content: if kubectl debug -it goodpod02-registry --image=busybox:1.35 --target=k8s-nginx
-          -n ir-pods-namespace; then exit 1; else exit 0; fi;
+        content: | 
+                if kubectl debug goodpod02-registry \
+                --profile=general \
+                --image=busybox:1.35 \
+                --target=k8s-nginx \
+                -n ir-pods-namespace; then
+                exit 1
+                else
+                exit 0
+                fi
+
   - name: step-98
     try:
     - script:
-        content: kubectl delete deployments --all --force --grace-period=0 -n ir-pods-namespace
-    - script:
         content: kubectl delete pods --all --force --grace-period=0 -n ir-pods-namespace
-    - script:
-        content: kubectl delete cronjobs --all --force --grace-period=0 -n ir-pods-namespace
-
+   
