--- a/other-vpol/restrict-wildcard-verbs/.chainsaw-test/policy-ready.yaml
+++ b/other-vpol/restrict-wildcard-verbs/.chainsaw-test/policy-ready.yaml
@@ -3,13 +3,12 @@ kind: ValidatingPolicy
 metadata:
   name: restrict-wildcard-verbs
 status:
-    conditionStatus:
-      conditions:
-      - reason: Succeeded
-        status: "True"
-        type: WebhookConfigured
-      - reason: Failed
-        status: "False"
-        type: RBACPermissionsGranted
-      
-    
+  conditionStatus:
+    (conditions[?type == 'RBACPermissionsGranted']):
+    - reason: Failed
+      status: "False"
+    (conditions[?type == 'WebhookConfigured']):
+    - message: Webhook configured.
+      reason: Succeeded
+      status: "True"
+      type: WebhookConfigured
