Add important hints if multiple resources should be watched
Signed-off-by: ThoTischner <9863411+ThoTischner@users.noreply.github.com>

--- a/other/restart-deployment-on-secret-change/restart-deployment-on-secret-change.yaml
+++ b/other/restart-deployment-on-secret-change/restart-deployment-on-secret-change.yaml
@@ -17,7 +17,10 @@ metadata:
       to one or more target Deployments thus triggering a new rollout and thereby
       refreshing the referred Secret. It may be necessary to grant additional privileges
       to the Kyverno ServiceAccount, via one of the existing ClusterRoleBindings or a new
-      one, so it can modify Deployments.
+      one, so it can modify Deployments. Only one resource may be defined per rule.
+      If multiple resources are listed in a single rule, the resourceVersion will continuously
+      oscillate between them, causing unnecessary and repeated rollouts. If multiple resources
+      must be watched, create a separate rule (with a unique annotation key) for each resource.
 spec:
   mutateExistingOnPolicyUpdate: false
   rules:
@@ -48,3 +51,30 @@ spec:
             metadata:
               annotations:
                 ops.corp.com/triggerrestart: "{{request.object.metadata.resourceVersion}}"
+  - name: update-another-secret
+    match:
+      any:
+        - resources:
+            kinds:
+              - Secret
+            names:
+              - myothersecret
+            namespaces:
+              - default
+    preconditions:
+      all:
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: Equals
+          value: UPDATE
+    mutate:
+      targets:
+        - apiVersion: apps/v1
+          kind: Deployment
+          name: busybox
+          namespace: default
+      patchStrategicMerge:
+        spec:
+          template:
+            metadata:
+              annotations:
+                ops.corp.com/triggerrestart-othersecret: "{{request.object.metadata.resourceVersion}}"
