fix!: memory-backed emptyDirs skip storage reqs
Signed-off-by: Volodymyr Chernetskyi <19735328+chernetskyi@users.noreply.github.com>

--- a/other/require-emptydir-requests-limits/.chainsaw-test/bad-pod.yaml
+++ b/other/require-emptydir-requests-limits/.chainsaw-test/bad-pod.yaml
@@ -42,7 +42,7 @@ spec:
     emptyDir: {}
   - name: foo
     emptyDir:
-      sizeLimit: 200Mi
+      medium: Memory
   - name: foo-host
     hostPath:
       path: /var/foo
