--- a/other/require-emptydir-requests-limits/.chainsaw-test/podcontroller-good.yaml
+++ b/other/require-emptydir-requests-limits/.chainsaw-test/podcontroller-good.yaml
@@ -52,7 +52,7 @@ spec:
         emptyDir: {}
       - name: foo
         emptyDir:
-          sizeLimit: 200Mi
+          medium: Memory
       - name: foo-host
         hostPath:
           path: /var/foo
@@ -104,7 +104,7 @@ spec:
             emptyDir: {}
           - name: foo
             emptyDir:
-              sizeLimit: 200Mi
+              medium: Memory
           - name: foo-host
             hostPath:
               path: /var/foo
