--- a/other/require-emptydir-requests-limits/require-emptydir-requests-limits.yaml
+++ b/other/require-emptydir-requests-limits/require-emptydir-requests-limits.yaml
@@ -15,7 +15,7 @@ metadata:
       the medium backing the emptyDir volume. This sample ensures that any
       initContainers or containers mounting an emptyDir volume have
       ephemeral-storage requests and limits set. Policy will be skipped if
-      the volume has already a sizeLimit set.
+      the volume is memory-backed.
 spec:
   background: false
   validationFailureAction: Audit
@@ -29,7 +29,7 @@ spec:
       context:
       - name: emptydirnames
         variable:
-          jmesPath: request.object.spec.volumes[?contains(keys(@), 'emptyDir') && !contains(keys(emptyDir), 'sizeLimit')].name
+          jmesPath: request.object.spec.volumes[?contains(keys(@), 'emptyDir') && (emptyDir.medium == '' || emptyDir.medium == `null`)].name
       preconditions:
         all:
           - key: "{{ request.object.spec.volumes[?contains(keys(@), 'emptyDir')] || `[]` | length(@) }}"
