--- a/other/require-emptydir-requests-limits/.chainsaw-test/pod-bad.yaml
+++ b/other/require-emptydir-requests-limits/.chainsaw-test/pod-bad.yaml
@@ -54,7 +54,7 @@ spec:
   volumes:
     - name: vol
       emptyDir:
-        sizeLimit: 200Mi
+        medium: Memory
     - name: foo
       emptyDir: {}
 ---
@@ -100,7 +100,7 @@ spec:
       emptyDir: {}
     - name: foo
       emptyDir:
-        sizeLimit: 200Mi
+        medium: Memory
 ---
 apiVersion: v1
 kind: Pod
